--- a/perscomp/compapp/templates/compapp/about.html
+++ b/perscomp/compapp/templates/compapp/about.html
@@ -3,4 +3,5 @@
 {% block content %}
 <h1>{{title}}</h1>
 <p>Содержимое страницы о сайте
+<p>Здесь вы можете подобрать компьютер по своим критериям</p>
 {% endblock %}
